fix dropdown spacing

--- a/app/bundles/CoreBundle/Assets/css/app/less/components/button-groups.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/button-groups.less
@@ -4,13 +4,15 @@
 
 // Prevent double borders when buttons are next to each other
 .btn-group {
-  .btn ~ .btn,
+  .btn ~ .btn:not(.dropdown-toggle),
   .btn ~ .btn-group,
   .btn-group ~ .btn,
   .btn-group ~ .btn-group {
     margin-left: 0;
   }
+  > .btn + .dropdown-toggle { margin-left: 1px; }
 }
+
 
 // The clickable button for toggling the menu
 // Remove the gradient and set the same inset shadow as the :active state
